Implemented deleteBooking middleware
Deleted untitled scratch file

Updated swagger.json even though it is going to be deleted
