# backend/src/routes/booking.ts
@@ -2,6 +2,7 @@ import express, { Request, Response } from 'express';
 import { query } from 'express-validator';
 import * as makeBookingController from '../controllers/booking/makeBookingController';
 import * as currentBookingsController from '../controllers/booking/currentBookingsController';
+import * as deleteCurrentBookingController from '../controllers/booking/deleteBookingController';
 import * as responses from '../utils/responses';
 
 export const router = express.Router();
@@ -36,8 +37,15 @@ router.get('/:bookingId', (req: Request, res: Response) =>
 );
 
 // Delete a booking
-router.delete('/:bookingId', (req: Request, res: Response) =>
-    responses.notImplemented(req, res)
+router.delete(
+    '/:bookingId',
+    deleteCurrentBookingController.deleteBooking(),
+    (req: Request, res: Response) => {
+        res.status(202).send({
+            code: 202,
+            message: 'Booking was deleted successfully'
+        });
+    }
 );
 
 // Add time to a booking
